<resources>
    <string name="app_name">Trans Mobile</string>
    <string name="contenu">Contenu</string>
    <string name="payement">P a y e m e n t</string>
    <string name="trajets">T r a j e t s</string>
    <string name="client">I n f o s - c l i e n t</string>
    <string name="notifications">N o t i f i c a t i o n s</string>
    <string name="compagnies">L i s t e - d e s - c o m p a g n i e s</string>
    <string name="homme">Homme</string>
    <string name="femme">Femme</string>
    <string name="prenom">Prénom:</string>
    <string name="nom">Nom:</string>
    <string name="genre">Genre:</string>
    <string name="email">Email :</string>
    <string name="numtel">Téléphone :</string>
    <string name="ville">Ville :</string>
    <string name="quartier">Quartier:</string>
    <string name="place_reserv">Place réservée(s):</string>
    <string name="total">Total:</string>
    <string name="Vos_infos">Vos informations</string>
    <string name="v_prenom">Entrez votre prénom</string>
    <string name="vv_prenom">Veuillez entrer votre prénom!</string>
    <string name="v_nom">Entrez votre nom</string>
    <string name="vv_nom">Veuillez entrer votre nom!</string>
    <string name="v_genre">homme/femmme</string>
    <string name="vv_genre">Veuillez spécifier votre genre!</string>
    <string name="v_email">Entrez votre e-mail</string>
    <string name="vv_email">Veuillez entrer votre e-mail!</string>
    <string name="v_numTel">Entrez votre numéro de téléphone</string>
    <string name="vv_numTel">Veuillez entrer votre numéro de téléphone!</string>
    <string name="v_ville">Entrez votre ville de résidence</string>
    <string name="vv_ville">Veuillez entrer votre ville de résidence!</string>
    <string name="v_quartier">Entrez votre quartier de résidence</string>
    <string name="vv_quartier">Veuillez entrer votre quartier de résidence</string>
    <string name="nb_place">Nombre de place à réserver :</string>
    <string name="v_nb_place">Désignez le nombre de place!</string>
    <string name="mess_respon">Vos donées de carte sont sécurisées!</string>
    <string name="v_numCard">Entrez votre numéro de carte</string>
    <string name="vv_numCard">Veuillez entrer votre numéro de carte!</string>
    <string name="v_pinCard">Entrez le PIN Card</string>
    <string name="vv_pinCard">Veuillez entrer le PIN Card!</string>
    <string name="v_dlcard">Indiquez la date d\'expiration  \"Mois/Année\"</string>
    <string name="vv_dlcard">Indiquez la date exacte de l\'expiration</string>
    <string name="mess_1">Votre réservation a été effectuée avec succès.</string>
    <string name="mess_2">Vous recevrez un message de confirmation après validation.</string>
    <string name="all_traj">Trajets disponibles</string>
</resources>