<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormulaireActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/backgroun_trans"
            tools:ignore="MissingConstraints,MissingPrefix" />
        <TextView
            android:id="@+id/clientDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"
            android:text="@string/Vos_infos"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="18dp"/>

        <EditText
            android:id="@+id/idPrenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clientDetail"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginBottom="05dp"
            android:textStyle="bold"
            android:hint="@string/v_prenom"/>

        <EditText
            android:id="@+id/idNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/clientDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idPrenom"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginBottom="05dp"
            android:textStyle="bold"
            android:hint="@string/v_nom"/>
        <EditText
            android:id="@+id/idGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/clientDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idNom"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginBottom="05dp"
            android:textStyle="bold"
            android:hint="@string/v_genre"/>

        <EditText
            android:id="@+id/idEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/clientDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idGenre"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginBottom="05dp"
            android:textStyle="bold"
            android:hint="@string/v_email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/idNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/clientDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idEmail"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginBottom="05dp"
            android:textStyle="bold"
            android:hint="@string/v_numTel"
            android:inputType="number"
            android:maxLength="8"/>

        <EditText
            android:id="@+id/idVille"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/clientDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idNum"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginBottom="05dp"
            android:textStyle="bold"
            android:hint="@string/v_ville"/>

        <EditText
            android:id="@+id/idQuartier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/clientDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idVille"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginBottom="05dp"
            android:textStyle="bold"
            android:hint="@string/v_quartier"/>
        <TableLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/clientDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idQuartier">

            <TableRow
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/clientDetail"
                app:layout_constraintTop_toBottomOf="@id/idQuartier">

                <TextView
                    android:id="@+id/idNbplace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="05dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="05dp"
                    android:text="Nombre de place à "
                    android:textColor="@android:color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/clientDetail"
                    app:layout_constraintTop_toBottomOf="@id/idQuartier" />


                <EditText
                    android:id="@+id/txtPlace"
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="05dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="05dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/clientDetail"
                    app:layout_constraintTop_toBottomOf="@id/idQuartier"
                    android:inputType="number"
                    android:maxLength="2"/>

            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/idTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout"
            android:layout_margin="10dp"
            android:text="@string/total"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/somme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idTotal"
            android:layout_margin="10dp"
            android:text="0.0 XOF"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/respon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/clientDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/somme"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginBottom="05dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/mess_respon"/>
        <EditText
            android:id="@+id/idCarte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/clientDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/respon"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginBottom="05dp"
            android:hint="@string/v_numCard"
            android:inputType="number"
            android:textStyle="bold"
            android:maxLength="16"/>

        <EditText
            android:id="@+id/idCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginEnd="10dp"
            android:textStyle="bold"
            android:hint="@string/v_pinCard"
            android:inputType="numberPassword"
            android:maxLength="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/clientDetail"
            app:layout_constraintTop_toBottomOf="@id/idCarte" />
        <EditText
            android:id="@+id/idDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/clientDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idCode"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="05dp"
            android:textStyle="bold"
            android:layout_marginBottom="05dp"
            android:hint="@string/v_dlcard"
            android:inputType="text"/>
        <TextView
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idDate"
            android:layout_margin="10dp"
            android:text="Envoyer"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/black"
            android:background="@drawable/button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>